--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch user-service",
+    "start2:dev": "nest start --watch notification-service",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/obrio/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/obrio/test/jest-e2e.json"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^5.5.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.4.7",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/pg": "^8.11.10",
+    "amqplib": "^0.10.4",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -71,7 +72,8 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^obrio/database(|/.*)$": "<rootDir>/libs/database/src/$1"
+      "^@obrio/db(|/.*)$": "<rootDir>/libs/db/src/$1",
+      "^@orbio/rabbitmq(|/.*)$": "<rootDir>/libs/rabbitmq/src/$1"
     }
   }
 }
