rix and refactor

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch user-service",
-    "start2:dev": "nest start --watch notification-service",
+    "start-user:dev": "nest start --watch user-service",
+    "start-notif:dev": "nest start --watch notification-service",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/obrio/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
@@ -24,9 +24,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/pg": "^8.11.10",
     "amqplib": "^0.10.4",
+    "axios": "^1.7.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "reflect-metadata": "^0.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -73,7 +75,8 @@
     ],
     "moduleNameMapper": {
       "^@obrio/db(|/.*)$": "<rootDir>/libs/db/src/$1",
-      "^@orbio/rabbitmq(|/.*)$": "<rootDir>/libs/rabbitmq/src/$1"
+      "^@orbio/rabbitmq(|/.*)$": "<rootDir>/libs/rabbitmq/src/$1",
+      "^@obrio/constants(|/.*)$": "<rootDir>/libs/constants/src/$1"
     }
   }
 }
