--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
-version: '3.8'
-
 services:
   user-service:
     build:
-      context: .
-      dockerfile: ./apps/user-service/Dockerfile
+      context: ./apps/user-service
+      dockerfile: ./Dockerfile
     ports:
       - '3000:3000'
     env_file:
       - ./.env
     depends_on:
       - db
+      - rabbitmq
+    networks:
+      - app-network
+
+  notification-service:
+    build:
+      context: ./apps/notification-service
+      dockerfile: ./Dockerfile
+    ports:
+      - '3001:3000'
+    env_file:
+      - ./.env
+    depends_on:
       - rabbitmq
     networks:
       - app-network
@@ -24,6 +35,7 @@ services:
       POSTGRES_DB: users
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - '5432:5432'
     networks:
@@ -31,7 +43,7 @@ services:
 
   rabbitmq:
     build:
-      context: .
+      context: ./docker
       dockerfile: RabbitMQ.Dockerfile
     environment:
       RABBITMQ_DEFAULT_USER: guest
